# osproject

./: Cargo.toml  README.md  debug.sh
.cargo/: config
src/: context.S  context.rs  debug.rs  gdt.rs  interrupt.rs  lib.rs  machine.S  machine.rs  main.rs  proc.rs  rtc.rs  task.rs  thread.rs  vga_text_buffer.rs
src/memory/: allocator.rs  list_allocator.rs  mod.rs  paging.rs
