[package]
name = "rustos"
version = "0.1.0"
authors = ["Alex Soderman <5639572+asoderman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oslib"
path = "src/lib.rs"

[[bin]]
name = "rustos"
path = "src/main.rs"

[dependencies]
bootloader = { version = "0.9.0", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.5"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
rlibc = "1.0.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-smp", "4"]
test-args = ["-serial", "stdio", 
             "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
             "-display", "none"]
test-success-exit-code = 33
#test-timout = 150

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
